# Gamestore-backend

./: .env  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: c9454a01efc9_initial_schema.py
app/: main.py
app/api/: auth.py  orders.py  products.py
app/core/: config.py
app/core/settings/: constants.py  database.py  dependencies.py  security.py
app/core/settings/exceptions/: auth.py  orders.py  products.py
app/enums/: audit_logs.py  language.py  locations.py  user_role.py
app/models/: __init__.py  base.py  order.py  product.py  user.py
app/router/: __init__.py
app/schemas/: auth.py  order.py  product.py
app/services/: auth.py  crud.py  order.py  product.py
data/: items.csv
scripts/: import_csv.py  seed_admin.py
tests/: conftest.py  test_auth.py  test_orders.py  test_products.py
