[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Zaid Alzubi",email = "zaidalzubi3@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "multipart (>=1.3.1,<2.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "bcrypt (==4.0.1)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
